--- a/loops/exercicios_array.html
+++ b/loops/exercicios_array.html
@@ -9,6 +9,9 @@
 <body>
     
     <script src="database.js"></script>
-    <script src="resolucao.js"></script>
+    <script src="resolucao1.js"></script>
+    <script src="resolucao2.js"></script>
+    <script src="resolucao3.js"></script>
+    <script src="resolucao4.js"></script>
 </body>
 </html>
