--- a/loops/exercicios_array.html
+++ b/loops/exercicios_array.html
@@ -13,5 +13,6 @@
     <script src="resolucao2.js"></script>
     <script src="resolucao3.js"></script>
     <script src="resolucao4.js"></script>
+    <script src="resolucao6.js"></script>
 </body>
 </html>
