--- a/loops/exercicios_array.html
+++ b/loops/exercicios_array.html
@@ -8,11 +8,27 @@
 </head>
 <body>
     
-    <script src="database.js"></script>
-    <script src="resolucao1.js"></script>
-    <script src="resolucao2.js"></script>
-    <script src="resolucao3.js"></script>
-    <script src="resolucao4.js"></script>
-    <script src="resolucao6.js"></script>
+    <script src="js/database.js"></script>
+    <script src="resolucoes/resolucao1.js"></script>
+    <script src="resolucoes/resolucao2.js"></script>
+    <script src="resolucoes/resolucao3.js"></script>
+    <script src="resolucoes/resolucao4.js"></script>
+    <!-- <script src="resolucoes/resolucao5.js"></script> -->
+    <script src="resolucoes/resolucao6.js"></script>
+    <script src="resolucoes/resolucao7.js"></script>
+    <script src="resolucoes/resolucao8.js"></script>
+    <script src="resolucoes/resolucao9.js"></script>
+    <script src="resolucoes/resolucao10.js"></script>
+    <script src="resolucoes/resolucao11.js"></script>
+    <script src="resolucoes/resolucao12.js"></script>
+    <script src="resolucoes/resolucao13.js"></script>
+    <script src="resolucoes/resolucao14.js"></script>
+    <script src="resolucoes/resolucao15.js"></script>
+    <!-- <script src="resolucoes/resolucao16.js"></script> -->
+    <script src="resolucoes/resolucao17.js"></script>
+    <script src="resolucoes/resolucao18.js"></script>
+    <script src="resolucoes/resolucao19.js"></script>
+    <!-- <script src="resolucoes/resolucao20.js"></script> -->
+
 </body>
 </html>
