--- a/loops/exercicios_array.html
+++ b/loops/exercicios_array.html
@@ -13,7 +13,7 @@
     <script src="resolucoes/resolucao2.js"></script>
     <script src="resolucoes/resolucao3.js"></script>
     <script src="resolucoes/resolucao4.js"></script>
-    <!-- <script src="resolucoes/resolucao5.js"></script> -->
+    <script src="resolucoes/resolucao5.js"></script>
     <script src="resolucoes/resolucao6.js"></script>
     <script src="resolucoes/resolucao7.js"></script>
     <script src="resolucoes/resolucao8.js"></script>
@@ -24,11 +24,11 @@
     <script src="resolucoes/resolucao13.js"></script>
     <script src="resolucoes/resolucao14.js"></script>
     <script src="resolucoes/resolucao15.js"></script>
-    <!-- <script src="resolucoes/resolucao16.js"></script> -->
+    <script src="resolucoes/resolucao16.js"></script>
     <script src="resolucoes/resolucao17.js"></script>
     <script src="resolucoes/resolucao18.js"></script>
     <script src="resolucoes/resolucao19.js"></script>
-    <!-- <script src="resolucoes/resolucao20.js"></script> -->
+    <script src="resolucoes/resolucao20.js"></script>
 
 </body>
 </html>
